--- a/presentation-android-mvp/src/main/res/layout/business_list_fragment.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_fragment.xml
@@ -15,16 +15,17 @@
   ~ limitations under the License.
   -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView xmlns:recyclerview="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.RecyclerView
         android:id="@id/content_pane"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars="vertical"
-        recyclerview:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+        auto:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
     <ProgressBar
         android:id="@id/loading_indicator"
