--- a/presentation-android-mvp/src/main/res/layout/business_list_item.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_item.xml
@@ -16,19 +16,20 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@android:style/Widget.Material.Button.Borderless"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/image"
         android:layout_width="@dimen/business_list_item_image_size"
         android:layout_height="@dimen/business_list_item_image_size"
-        fresco:actualImageScaleType="centerCrop"
-        fresco:placeholderImage="@drawable/ic_business_placeholder"
-        fresco:placeholderImageScaleType="centerCrop"
-        fresco:roundedCornerRadius="@dimen/business_list_item_image_corner_radius" />
+        auto:actualImageScaleType="centerCrop"
+        auto:placeholderImage="@drawable/ic_business_placeholder"
+        auto:placeholderImageScaleType="centerCrop"
+        auto:roundedCornerRadius="@dimen/business_list_item_image_corner_radius" />
 
     <TextView
         android:id="@+id/name"
