Fixed content disappearing after device rotation

--- a/presentation-android-mvp/src/main/res/layout/business_details_fragment.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_details_fragment.xml
@@ -24,8 +24,7 @@
     <ScrollView
         android:id="@id/content_pane"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
